@@ -73,6 +73,40 @@ func TestMultilineBeforeNegateOK(t *testing.T) {
 	)
 }
 
+func TestMultilineAfterNegateOKFlushPattern(t *testing.T) {
+	flushMatcher := match.MustCompile(`EventEnd`)
+
+	testMultilineOK(t,
+		MultilineConfig{
+			Pattern:      match.MustCompile(`EventStart`),
+			Negate:       true,
+			Match:        "after",
+			FlushPattern: &flushMatcher,
+		},
+		3,
+		"EventStart\nEventId: 1\nEventEnd\n",
+		"OtherThingInBetween\n", // this should be a seperate event..
+		"EventStart\nEventId: 2\nEventEnd\n",
+	)
+}
+
+func TestMultilineAfterNegateOKFlushPatternWhereTheFirstLinesDosentMatchTheStartPattern(t *testing.T) {
+	flushMatcher := match.MustCompile(`EventEnd`)
+
+	testMultilineOK(t,
+		MultilineConfig{
+			Pattern:      match.MustCompile(`EventStart`),
+			Negate:       true,
+			Match:        "after",
+			FlushPattern: &flushMatcher,
+		},
+		3, //first two non-matching lines, will be merged to one event
+		"StartLineThatDosentMatchTheEvent\nOtherThingInBetween\n",
+		"EventStart\nEventId: 2\nEventEnd\n",
+		"EventStart\nEventId: 3\nEventEnd\n",
+	)
+}
+
 func TestMultilineBeforeNegateOKWithEmptyLine(t *testing.T) {
 	testMultilineOK(t,
 		MultilineConfig{
@@ -96,6 +130,7 @@ func testMultilineOK(t *testing.T, cfg MultilineConfig, events int, expected ...
 		if err != nil {
 			break
 		}
+
 		messages = append(messages, message)
 	}
 
